--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head> 
         <meta property="og:image" content="https://www.giforvideo.ml/3AD490BF-0995-4EAC-81E2-AEBB7815BCE2.gif">
         <meta property="og:type" content="video.other">
-        <meta property="og:video:url" content="https://cdn.discordapp.com/attachments/950691795493351434/967238747114577981/misery.mp4">
-        <meta property="og:video:height" content="202">
-        <meta property="og:video:width" content="250">
+        <meta property="og:video:url" content="https://www.giforvideo.ml/IMG_5699.MOV">
+        <meta property="og:video:height" content="1280">
+        <meta property="og:video:width" content="720">
     </head>
     <body>
      sex
