--- a/discord.jpg/index.html
+++ b/discord.jpg/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <meta property="og:image" content="https://cdn.discordapp.com/attachments/950691795493351434/967262018744762378/huh.gif">
+        <meta property="og:image" content="https://giforvideo.ml/3AD490BF-0995-4EAC-81E2-AEBB7815BCE2.gif">
         <meta property="og:type" content="video.other">
         <meta property="og:video:url" content="https://giforvideo.ml/trim.89AA8324-708A-4732-B896-DCFB948AEDDA_resized.mp4">
         <meta property="og:video:height" content="202">
