--- a/discord.jpg/index.html
+++ b/discord.jpg/index.html
@@ -3,7 +3,7 @@
     <head> 
         <meta property="og:image" content="https://giforvideo.ml/3AD490BF-0995-4EAC-81E2-AEBB7815BCE2.gif">
         <meta property="og:type" content="video.other">
-        <meta property="og:video:url" content="https://giforvideo.ml/trim.89AA8324-708A-4732-B896-DCFB948AEDDA_resized.mp4">
+        <meta property="og:video:url" content="https://giforvideo.ml/discord.mp4">
         <meta property="og:video:height" content="202">
         <meta property="og:video:width" content="250">
     </head>
